--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Laboratory reports that need to be ignored
+*.doc
+*.docx
+
+# idea settings and vscode settings
+.idea/
+.vscode/
+
+# IDEA project settings
+*.iml
+
+# test output
+out/
+lab/
